añadidos packages para usar mysql

--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/victor-bolivar/exfinal_g9#readme",
   "dependencies": {
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "mysql2": "^2.2.5",
     "socket.io": "^4.1.3"
   }
 }
